--- a/views/common/footer.ejs
+++ b/views/common/footer.ejs
@@ -1,25 +1,17 @@
 <footer class="fixed-bottom bg-light pt-3 border-top">
     <div class="container">
       <div class="row">
-        <div class="col-lg-6">
+        <div class="col-6">
           <p class="text-muted">&copy; EkStep Foundation, 2020 .</p>
         </div>
-        <div class="col-lg-6">
+        <div class="col-6">
             <ul class="list-inline mb-2">
               <li class="list-inline-item">
                 <a href="/about-us">About Us</a>
               </li>
               <li class="list-inline-item">&sdot;</li>
               <li class="list-inline-item">
-                <a href="/contact-us">Contact Us</a>
-              </li>
-              <li class="list-inline-item">&sdot;</li>
-              <li class="list-inline-item">
                   <a href="/terms-and-conditions">Terms & Conditions</a>
-              </li>
-              <li class="list-inline-item">&sdot;</li>
-              <li class="list-inline-item">
-                  <a href="/privacy-policy">Privacy Policy</a>
               </li>
             </ul>
           </div>
