--- a/views/common/header.ejs
+++ b/views/common/header.ejs
@@ -8,13 +8,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item p-2">
-                <a href="/how-it-works" class="nav-link text-dark font-weight-bold">How it works</a>
-            </li>
-            <li class="nav-item p-2">
                 <a href="/about-us" class="nav-link text-dark font-weight-bold">About Us</a>
             </li>
             <li class="nav-item p-2">
-                <a href="/contact-us" class="nav-link text-dark font-weight-bold">Contact Us</a>
+                <a class="nav-link text-dark font-weight-bold d-none" id="nav-user">
+                    <span class="material-icons align-middle mx-1">account_circle</span>
+                    <span id="nav-username"></span>
+                </a>
             </li>
         </ul>
     </div>
