--- a/views/record.ejs
+++ b/views/record.ejs
@@ -76,19 +76,13 @@
             </div>
             <div class="row justify-content-center mt-5">
                 <div class="col-lg-2 col-md-3 col-sm-4 col-6">
-                    <button type="button" id="reRecord" class="d-none btn btn-outline-primary shadow h6 w-100 rounded mt-4 p-3">
-                        <i class="material-icons align-middle mr-2">repeat</i>
-                        <span class="align-middle">
-                            RE_RECORD
-                        </span>
+                    <button type="button" id="reRecord" class="d-none btn btn-outline-primary h6 w-100 rounded mt-4 p-3">
+                            RE-RECORD
                     </button>
                 </div>
                 <div class="col-lg-2 col-md-3 col-sm-4 col-6">
                     <button type="button" id="nextBtn" class="d-none btn btn-primary shadow h6 w-100 rounded mt-4 p-3">
-                        <i class="material-icons align-middle mr-2">navigate_next</i>
-                        <span class="align-middle">
                             NEXT
-                        </span>
                     </button>
                 </div>
             </div>
@@ -98,7 +92,7 @@
     <%- include common/footer.ejs %>
 
 <div class="modal fade" id="instructionsModal" tabindex="-1" role="dialog" aria-hidden="true">
-  <div class="modal-dialog" role="document">
+  <div class="modal-dialog mw-100 mt-0" role="document">
     <div class="modal-content">
         <div class="container-fluid bg-light" id="recording-instructions">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -107,34 +101,29 @@
             <div class="text-center pb-5 pt-5">
                 <p class="display-5 font-wt-900 site-blue">Recording Instructions</h1>
             </div>
-            <div class="row pb-5">
-                <div class="col-10 offset-1">
-                    <div class="row justify-content-center">
-                        <div class="col-lg-4 col-md-4 col-6 mb-3 text-center">
-                            <i class="material-icons p-4  rounded-circle md-48 text-primary border-3">settings_voice</i>
-                            <p class="mt-3 lh-7 site-blue">Please test your <b>microphone</b></p>
-                        </div>
-                        <div class="col-lg-4 col-md-4 col-6 mb-3 text-center">
-                            <i class="material-icons p-4  rounded-circle md-48 text-primary border-3">speaker</i>
-                            <p class="mt-3 lh-7 site-blue">Please test your <b>speakers</b></p>
-                        </div>
-                        <div class="col-lg-4 col-md-4 col-6 mb-3 text-center">
-                            <i class="material-icons p-4  rounded-circle md-48 text-primary border-3">equalizer</i>
-                            <p class="mt-3 lh-7 site-blue">Ensure there is <b>no background noise</b></p>
-                        </div>
-                        <div class="col-lg-4 col-md-4 col-6 mb-3 text-center">
-                            <i class="material-icons p-4  rounded-circle md-48 text-primary border-3">record_voice_over</i>
-                            <p class="mt-3 lh-7 site-blue">Get comfortable with the prompted text, before recording, by <b>reading it aloud</b></p>
-                        </div>
-                        <div class="col-lg-4 col-md-4 col-6 mb-3 text-center">
-                            <i class="material-icons p-4  rounded-circle md-48 text-primary border-3">play_circle_filled</i>
-                            <p class="mt-3 lh-7 site-blue">Get started by clicking on <b>Record</b> button</p>
-                        </div>
-                    </div>
+            <div class="row pb-5 justify-content-center">
+                <div class="col-lg-2 col-sm-4 col-6 mb-3 text-center">
+                    <i class="material-icons p-4  rounded-circle md-48 text-primary border-3">settings_voice</i>
+                    <p class="mt-3 lh-7 site-blue">Please test your <b>microphone</b></p>
+                </div>
+                <div class="col-lg-2 col-sm-4 col-6 mb-3 text-center">
+                    <i class="material-icons p-4  rounded-circle md-48 text-primary border-3">speaker</i>
+                    <p class="mt-3 lh-7 site-blue">Please test your <b>speakers</b></p>
+                </div>
+                <div class="col-lg-2 col-sm-4 col-6 mb-3 text-center">
+                    <i class="material-icons p-4  rounded-circle md-48 text-primary border-3">equalizer</i>
+                    <p class="mt-3 lh-7 site-blue">Ensure there is <b>no background noise</b></p>
+                </div>
+                <div class="col-lg-2 col-sm-4 col-6 mb-3 text-center">
+                    <i class="material-icons p-4  rounded-circle md-48 text-primary border-3">record_voice_over</i>
+                    <p class="mt-3 lh-7 site-blue">Get comfortable with the prompted text, before recording, by <b>reading it aloud</b></p>
+                </div>
+                <div class="col-lg-2 col-sm-4 col-6 mb-3 text-center">
+                    <i class="material-icons p-4  rounded-circle md-48 text-primary border-3">play_circle_filled</i>
+                    <p class="mt-3 lh-7 site-blue">Get started by clicking on <b>Record</b> button</p>
                 </div>
             </div>
         </div>
-    
     </div>
   </div>
 </div>
