--- a/views/thank-you.ejs
+++ b/views/thank-you.ejs
@@ -21,20 +21,20 @@
             <h1 class="display-5 font-wt-900 site-blue">Thank you for contributing!</h1>
         </div>
         <div class="row justify-content-center">
-            <div class="col-6 text-center">
-                <img src="/img/thanks.svg" class="img img-fluid">
+            <div class="col-8 col-md-5 text-left">
+                <img src="/img/thanks.svg" class="img img-fluid w-100">
             </div>
         </div>
-       
         <div class="row justify-content-center">
-            <div class="col-xl-6 col-lg-8 col-10 text-center">
-                <p>
-                    You have contributed enormously and are just <b>20 minutes</b> away from your goal.
+            <div class="col-8 col-md-5 text-muted text-left">
+                <p class="ml-3">
+                    We are <b>20 minutes</b> closer to our goal!!!
                 </p>
             </div>
         </div>
+       
         <div class="row justify-content-center mt-5">
-            <div class="col-xl-6 col-lg-8 col-10 text-center">
+            <div class="col-xl-6 col-lg-8 col-10 text-center lead">
                 <p>
                     Vakyaansh has been envisioned to meet a goal of approx. 10,000 hours of diversified Indian voices.
                 </p>
@@ -42,19 +42,33 @@
                     A contribution of 30-45 mins voice per speaker can make Vakyaansh come closer to it’s vision.
                 </p>
                 <p>
-                    We know you can do more!
+                    <b>We know you can do more!</b>
                 </p>
             </div>
         </div>
-        <div class="text-center mt-2">
-            <a href="/record" class="btn btn-primary btn-lg">Contribute More</a>
+        <div class="row justify-content-center mt-5">
+            <div class="col-xl-6 col-lg-8 col-10 text-center lead">
+                <a href="/record" class="btn btn-primary btn-lg h6 w-50">Contribute More</a>
+            </div>
         </div>
-        <div class="text-center mt-5">
-            <p>Come Back again to hit your Goalpost <span class="text-primary material-icons md-48 align-middle">
-                watch_later
-                </span></p>
-            
-            <a href="/">Done for now</a>
+        <div class="row justify-content-center mt-5">
+            <div class="col-md-3 col-6 text-center">
+                <p class="text-muted">Come Back again to hit your Goalpost </p>
+                <span class="text-primary">40%</span>
+                <img src="/img/progress.svg" class="img img-fluid">
+            </div>
+            <div class="col-md-3 col-6 text-center text-muted">
+                <p class="text-primary">Share it with your friends and family</p>
+                <a href="https://www.instagram.com">
+                    <img src="/img/insta.png" class="img img-fluid">
+                </a>
+                <span>&sdot;</span>
+                <img src="/img/fb.png" class="img img-fluid">
+                <span>&sdot;</span>
+                <img src="/img/linkedin.png" class="img img-fluid">
+                <span>&sdot;</span>
+                <img src="/img/twitter.png" class="img img-fluid">
+            </div>
         </div>
     </div>
     <%- include common/footer.ejs %>
