home page image updated

--- a/public/css/record.css
+++ b/public/css/record.css
@@ -156,6 +156,10 @@ audio {
 .font-wt-900 {
   font-weight: 900;
 }
+#time-progress{
+  right: 1rem;
+  bottom: 2.8rem;
+}
 /* loader */
 .overlay__content {
   left: 50%;
