--- a/views/home.ejs
+++ b/views/home.ejs
@@ -48,13 +48,13 @@
         </div>
         <div class="row pb-5 justify-content-center mt-5">
             <div class="col-8 col-lg-4 mb-3 text-center pb-5">
-               <img src="img/spd-1.png" class="img img-fluid">
+               <img src="img/spd-1.svg" alt="Speaker Diversity" class="img img-fluid">
             </div>
             <div class="col-8 col-lg-4 mb-3 text-center pb-5">
-                <img src="img/spd-2.png" class="img img-fluid">
+                <img src="img/spd-2.svg" alt="Speaker Diversity" class="img img-fluid">
             </div>
             <div class="col-8 col-lg-4 mb-3 text-center pb-5">
-                <img src="img/spd-3.png" class="img img-fluid">
+                <img src="img/spd-3.svg" alt="Speaker Diversity" class="img img-fluid">
             </div>
         </div>
     </div>
