--- a/views/record.ejs
+++ b/views/record.ejs
@@ -6,7 +6,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="css/notyf.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet"
+        type="text/css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -44,9 +45,8 @@
             </div>
             <div class="row justify-content-center mt-5">
                 <div class="col-lg-2 col-md-4 col-6">
-                    <button type="button" class="btn btn-primary shadow h6 w-100 rounded mt-4 p-3"
-                        id="startRecord">
-                            START RECORDING
+                    <button type="button" class="btn btn-primary shadow h6 w-100 rounded mt-4 p-3" id="startRecord">
+                        START RECORDING
                     </button>
                 </div>
             </div>
@@ -64,8 +64,9 @@
             </div>
             <div class="row justify-content-center mt-5">
                 <div class="col-lg-2 col-md-4 col-6">
-                    <button type="button" id="stopRecord" class="d-none btn btn-primary shadow h6 w-100 rounded mt-4 p-3">
-                            STOP RECORDING
+                    <button type="button" id="stopRecord"
+                        class="d-none btn btn-primary shadow h6 w-100 rounded mt-4 p-3">
+                        STOP RECORDING
                     </button>
                 </div>
             </div>
@@ -76,83 +77,97 @@
             </div>
             <div class="row justify-content-center mt-5">
                 <div class="col-lg-2 col-md-3 col-sm-4 col-6">
-                    <button type="button" id="reRecord" class="d-none btn btn-outline-primary h6 w-100 rounded mt-4 p-3">
-                            RE-RECORD
+                    <button type="button" id="reRecord"
+                        class="d-none btn btn-outline-primary h6 w-100 rounded mt-4 p-3">
+                        RE-RECORD
                     </button>
                 </div>
                 <div class="col-lg-2 col-md-3 col-sm-4 col-6">
                     <button type="button" id="nextBtn" class="d-none btn btn-primary shadow h6 w-100 rounded mt-4 p-3">
-                            NEXT
+                        NEXT
                     </button>
                 </div>
             </div>
         </div>
+        <div id="time-progress" class="position-fixed text-center">
+            <img src="img/progress-bar-sq.svg" alt="time progress" class="img img-fluid">
+            <div>
+                <span class="h6" id="time-value">0s</span><span class="text-muted">/30 min</span>
+            </div>
+            
+            <p>away from reaching your goal!</p>
+        </div>
     </div>
- 
+
     <%- include common/footer.ejs %>
 
-<div class="modal fade" id="instructionsModal" tabindex="-1" role="dialog" aria-hidden="true">
-  <div class="modal-dialog mw-100 mt-0" role="document">
-    <div class="modal-content">
-        <div class="container-fluid bg-light" id="recording-instructions">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span class="h2" aria-hidden="true">&times;</span>
-              </button>
-            <div class="text-center pb-5 pt-5">
-                <p class="display-5 font-wt-900 site-blue">Recording Instructions</h1>
-            </div>
-            <div class="row pb-5 justify-content-center">
-                <div class="col-lg-2 col-sm-4 col-6 mb-3 text-center">
-                    <i class="material-icons p-4  rounded-circle md-48 text-primary border-3">settings_voice</i>
-                    <p class="mt-3 lh-7 site-blue">Please test your <b>microphone</b></p>
-                </div>
-                <div class="col-lg-2 col-sm-4 col-6 mb-3 text-center">
-                    <i class="material-icons p-4  rounded-circle md-48 text-primary border-3">speaker</i>
-                    <p class="mt-3 lh-7 site-blue">Please test your <b>speakers</b></p>
-                </div>
-                <div class="col-lg-2 col-sm-4 col-6 mb-3 text-center">
-                    <i class="material-icons p-4  rounded-circle md-48 text-primary border-3">equalizer</i>
-                    <p class="mt-3 lh-7 site-blue">Ensure there is <b>no background noise</b></p>
-                </div>
-                <div class="col-lg-2 col-sm-4 col-6 mb-3 text-center">
-                    <i class="material-icons p-4  rounded-circle md-48 text-primary border-3">record_voice_over</i>
-                    <p class="mt-3 lh-7 site-blue">Get comfortable with the prompted text, before recording, by <b>reading it aloud</b></p>
-                </div>
-                <div class="col-lg-2 col-sm-4 col-6 mb-3 text-center">
-                    <i class="material-icons p-4  rounded-circle md-48 text-primary border-3">play_circle_filled</i>
-                    <p class="mt-3 lh-7 site-blue">Get started by clicking on <b>Record</b> button</p>
+    <div class="modal fade" id="instructionsModal" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog mw-100 mt-0" role="document">
+            <div class="modal-content">
+                <div class="container-fluid bg-light" id="recording-instructions">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span class="h2" aria-hidden="true">&times;</span>
+                    </button>
+                    <div class="text-center pb-5 pt-5">
+                        <p class="display-5 font-wt-900 site-blue">Recording Instructions</h1>
+                    </div>
+                    <div class="row pb-5 justify-content-center">
+                        <div class="col-lg-2 col-sm-4 col-6 mb-3 text-center">
+                            <i class="material-icons p-4  rounded-circle md-48 text-primary border-3">settings_voice</i>
+                            <p class="mt-3 lh-7 site-blue">Please test your <b>microphone</b></p>
+                        </div>
+                        <div class="col-lg-2 col-sm-4 col-6 mb-3 text-center">
+                            <i class="material-icons p-4  rounded-circle md-48 text-primary border-3">speaker</i>
+                            <p class="mt-3 lh-7 site-blue">Please test your <b>speakers</b></p>
+                        </div>
+                        <div class="col-lg-2 col-sm-4 col-6 mb-3 text-center">
+                            <i class="material-icons p-4  rounded-circle md-48 text-primary border-3">equalizer</i>
+                            <p class="mt-3 lh-7 site-blue">Ensure there is <b>no background noise</b></p>
+                        </div>
+                        <div class="col-lg-2 col-sm-4 col-6 mb-3 text-center">
+                            <i
+                                class="material-icons p-4  rounded-circle md-48 text-primary border-3">record_voice_over</i>
+                            <p class="mt-3 lh-7 site-blue">Get comfortable with the prompted text, before recording, by
+                                <b>reading it aloud</b></p>
+                        </div>
+                        <div class="col-lg-2 col-sm-4 col-6 mb-3 text-center">
+                            <i
+                                class="material-icons p-4  rounded-circle md-48 text-primary border-3">play_circle_filled</i>
+                            <p class="mt-3 lh-7 site-blue">Get started by clicking on <b>Record</b> button</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-  </div>
-</div>
 
-<div class="modal fade" id="errorModal" tabindex="-1" role="dialog" aria-labelledby="errorModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header text-danger">
-          <h5 class="modal-title h2" id="errorModalLabel">
-            <span class="material-icons md-48 align-middle">
-                error
-                </span>
-                Error !!!</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
+    <div class="modal fade" id="errorModal" tabindex="-1" role="dialog" aria-labelledby="errorModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header text-danger">
+                    <h5 class="modal-title h2" id="errorModalLabel">
+                        <span class="material-icons md-48 align-middle">
+                            error
+                        </span>
+                        Error !!!</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    An unexpected error occured while processing your request. Please try after some time.
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
         </div>
-        <div class="modal-body">
-          An unexpected error occured while processing your request. Please try after some time.
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        </div>
-      </div>
     </div>
-  </div>
 
 
-    <script src="https://cdn.jsdelivr.net/gh/mattdiamond/Recorderjs@08e7abd99739be6946f19f6806ccb368138f2dd3/dist/recorder.js"></script>
+    <script
+        src="https://cdn.jsdelivr.net/gh/mattdiamond/Recorderjs@08e7abd99739be6946f19f6806ccb368138f2dd3/dist/recorder.js"></script>
     <script src="js/notyf.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
