--- a/views/common/header.ejs
+++ b/views/common/header.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light p-4">
+<nav class="navbar navbar-expand-lg navbar-light bg-light px-4">
     <a class="h1 text-dark" href="/"><u>Ek</u><sub> <u>Step</u></sub> </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
