--- a/views/home.ejs
+++ b/views/home.ejs
@@ -24,12 +24,23 @@
                     product that focusses solely on our languages. This vision requires enormous amount of diversified
                     dataset of Indian voices and hence, we are reaching out to you for your contribution.<a class="ml-1"
                         href="/about-us"> See More</a></p>
-                <div class="row">
+                <div class="row align-items-center">
                     <div class="col-8 col-lg-5">
                         <a role="button" href="#speaker-details"
                             class="btn btn-outline-primary h6 w-100 rounded mt-4 p-3">
                             START RECORDING
                         </a>
+                    </div>
+                    <div class="col-4 text-center align-self-end">
+                        <p class="mb-0">As of Today</p>
+                        <div class="mb-0 h5 mb-auto"><span class="h2">5000</span><span>/10000</span></div>
+                        <p class="mb-0">Hours recorded</p>
+                    </div>
+                </div>
+                <div class="row pt-4">
+                    <div class="col-5 text-center">
+                        <p class="mb-0 h3">1200</p>
+                        <p class="mb-0">Speaker contributed</p>
                     </div>
                 </div>
 
@@ -48,13 +59,16 @@
         </div>
         <div class="row pb-5 justify-content-center mt-5">
             <div class="col-8 col-lg-4 mb-3 text-center pb-5">
-               <img src="img/spd-1.svg" alt="Speaker Diversity" class="img img-fluid">
+               <img src="img/spd-1.svg" alt="Speaker Diversity" class="img img-fluid h-100">
+               <p class="h4 mt-4">Age Group</p>
             </div>
             <div class="col-8 col-lg-4 mb-3 text-center pb-5">
-                <img src="img/spd-2.svg" alt="Speaker Diversity" class="img img-fluid">
+                <img src="img/spd-2.svg" alt="Speaker Diversity" class="img img-fluid h-100">
+                <p class="h4 mt-4">Mother Tongue</p>
             </div>
             <div class="col-8 col-lg-4 mb-3 text-center pb-5">
-                <img src="img/spd-3.svg" alt="Speaker Diversity" class="img img-fluid">
+                <img src="img/spd-3.svg" alt="Speaker Diversity" class="img img-fluid h-100">
+                <p class="h4 mt-4">Gender</p>
             </div>
         </div>
     </div>
@@ -132,7 +146,7 @@
                     </div>
                     <div class="form-check mt-1">
                         <input class="form-check-input" type="checkbox" value="" id="tnc">
-                        <label class="form-check-label" for="tnc">
+                        <label class="form-check-label ml-2" for="tnc">
                             I have read and agree to the <a href="/terms-and-conditions">Terms and Conditions</a>
                         </label>
                     </div>
