--- a/views/thank-you.ejs
+++ b/views/thank-you.ejs
@@ -21,12 +21,17 @@
             <h1 class="display-5 font-wt-900 site-blue">Thank you for contributing!</h1>
         </div>
         <div class="row justify-content-center">
-            <div class="col-8 col-md-5 text-left">
+            <div class="col-2 my-auto text-muted text-right pr-0">
+                <p class="mb-0">5000/</p>
+                <p>10000 hours</p>
+            </div>
+            <div class="col-5 text-left">
                 <img src="/img/thanks.svg" class="img img-fluid w-100">
             </div>
+      
         </div>
         <div class="row justify-content-center">
-            <div class="col-8 col-md-5 text-muted text-left">
+            <div class="col-5 offset-2 text-muted text-left">
                 <p class="ml-3">
                     We are <b>20 minutes</b> closer to our goal!!!
                 </p>
@@ -59,15 +64,17 @@
             </div>
             <div class="col-md-3 col-6 text-center text-muted">
                 <p class="text-primary">Share it with your friends and family</p>
-                <a href="https://www.instagram.com">
-                    <img src="/img/insta.png" class="img img-fluid">
+                <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A//codmento.com/" class="opc-4">
+                    <img src="/img/fb.png" class="img img-fluid">
                 </a>
                 <span>&sdot;</span>
-                <img src="/img/fb.png" class="img img-fluid">
+                <a href="https://www.linkedin.com/shareArticle?mini=true&url=https%3A//codmento.com/&title=Vakyansh" class="opc-4">
+                    <img src="/img/linkedin.png" class="img img-fluid">
+                </a>
                 <span>&sdot;</span>
-                <img src="/img/linkedin.png" class="img img-fluid">
-                <span>&sdot;</span>
-                <img src="/img/twitter.png" class="img img-fluid">
+                <a href="https://twitter.com/intent/tweet?text=Hey%20checkout%20this%20this%20https%3A//codmento.com/" class="opc-4">
+                    <img src="/img/twitter.png" class="img img-fluid">
+                </a>
             </div>
         </div>
     </div>
