--- a/views/about-us.ejs
+++ b/views/about-us.ejs
@@ -2,48 +2,42 @@
 <html>
 
 <head>
-    <title>Va Sourcing Platform</title>
+    <title>Vakyaansh: A crowdsourcing initiative for Indic languages</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet"
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet"
         type="text/css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="css/home.css">
 </head>
 
 <body>
 
     <%- include common/header.ejs %>
-    <div class="container">
-        <section class="bg-yellow color-blue">
-
-            <div class="d-flex j-center">
-                <div class="col-6">
-                    <div class="d-flex t-center fnt-3">
-                        <h3>
-                            Access to learning opportunities
-                            for every child
-                        </h3>
-                    </div>
-
-                </div>
+    <div class="container-fluid">
+        <div class="row pt-5">
+            <div class="col-6 ml-auto p-5 text-dark mt-5">
+                <h1 class="display-5 font-wt-900 site-blue">Vakyaansh: A crowdsourcing initiative for Indic languages
+                </h1>
+                <p class="h4 font-weight-light lh-7 site-blue text-justify">We have envisioned a Speech recognition
+                    product that focusses solely on our languages. This vision requires enormous amount of diversified
+                    dataset of Indian voices and hence, we are reaching out to you for your contribution.</p>
 
             </div>
-            <div class="d-flex j-center">
-                <div class="col-8">
-                    <div class="d-flex j-center fnt-2">
-                        <p>The lack of access to learning opportunities is a complex and multidimensional problem. It
-                            impacts the lives of millions of children on a daily basis. In response, Nandan Nilekani,
-                            Rohini Nilekani and Shankar Maruwada co-founded EkStep, a not-for-profit initiative to
-                            gather partners on a universal, collaborative platform to reimagine learning opportunities
-                            for every child.</p>
-                    </div>
-                </div>
+            <div class="col-5 pt-5 mt-5 text-right pr-0">
+                <img src="/img/home.svg" class="img img-fluid">
             </div>
-        </section>
+        </div>
     </div>
-    <%- include common/footer.ejs %>
 
+    <%- include common/footer.ejs %>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
