--- a/views/record.ejs
+++ b/views/record.ejs
@@ -39,14 +39,19 @@
                 </div>
             </div>
             <div class="row justify-content-center ">
-                <div class="col-8 text-muted" id="get-started">
+                <div class="col-8 text-muted h-1r" id="get-started">
                     Let's get started!
                 </div>
             </div>
-            <div class="row justify-content-center mt-5">
-                <div class="col-lg-2 col-md-4 col-6">
+            <div class="row justify-content-center mt-5" id="startRecordRow">
+                <div class="col-lg-2 col-md-3 col-sm-4 col-6" id="startRecordCol">
                     <button type="button" class="btn btn-primary shadow h6 w-100 rounded mt-4 p-3" id="startRecord">
                         START RECORDING
+                    </button>
+                </div>
+                <div class="col-lg-2 col-md-3 col-sm-4 col-6">
+                    <button type="button" tabindex="-1" id="skipBtn" class="btn btn-outline-primary h6 w-100 rounded mt-4 p-3">
+                        SKIP
                     </button>
                 </div>
             </div>
