--- a/views/about-us.ejs
+++ b/views/about-us.ejs
@@ -17,17 +17,129 @@
     <%- include common/header.ejs %>
     <div class="container-fluid">
         <div class="row pt-5">
-            <div class="col-6 ml-auto p-5 text-dark mt-5">
+            <div class="col-6 ml-lg-auto py-5 pl-5 text-dark my-5">
                 <h1 class="display-5 font-wt-900 site-blue">Vakyaansh: A crowdsourcing initiative for Indic languages
                 </h1>
                 <p class="h4 font-weight-light lh-7 site-blue text-justify">We have envisioned a Speech recognition
                     product that focusses solely on our languages. This vision requires enormous amount of diversified
                     dataset of Indian voices and hence, we are reaching out to you for your contribution.</p>
-
             </div>
-            <div class="col-5 pt-5 mt-5 text-right pr-0">
+            <div class="col-lg-5 col-6 pt-5 mt-5 text-right px-0">
                 <img src="/img/home.svg" class="img img-fluid">
             </div>
+        </div>
+    </div>
+
+    <div class="container-fluid bg-blue mt-n6 pb-6 pt-6">
+        <div class="row justify-content-center text-white pt-5 pb-5">
+            <aside class="col-8 col-lg-4 text-left pr-4 pl-0 mb-2">
+                <p class="h1 font-wt-900">
+                    Our multilingual DNA is still a missing piece in digital first strategy
+                </p>
+            </aside>
+            <div class="col-8 col-lg-3 text-left lh-7 pl-lg-3 pl-0 mb-2">
+                <section class="lead"><b>90% of India’s population </b>relies on regional languages to conduct their
+                    educational, social & digital
+                    activities, resulting in enormous multilingual content. Experts say that, nine out of ten new
+                    internet users will use local languages and by 2021, there will be around <b>500 million users </b> of
+                    Indian languages.</section>
+            </div>
+            <div class="col-8 col-lg-3 text-left pl-lg-3 pl-0 mb-2">
+                <section class="lead">This shows that there is a need to start aligning communication and <b> winning back
+                    our languages </b> by
+                    influencing the various digital platforms and consumer products, such as, learning platforms, to
+                    start thinking Indic languages first and move towards language localization in India</section>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid bg-light-blue mt-n5">
+        <div class="row pb-6 pt-6 justify-content-center mt-5">
+            <div class="col-8 col-lg-4 mb-3 text-center p-5">
+                <img src="img/about-us-1.svg" alt="Speaker Diversity" class="img img-fluid h-100">
+            </div>
+            <div class="col-8 col-lg-6 mb-3 text-left pb-5 lead">
+                <p class="h1 font-wt-900 lh-7">
+                    Winning back our languages by introducing localisation in our ecosystem
+                </p>
+                <p>The need of the hour, hence, is to introduce India to a highly qualitative Speech recognition product
+                    that specializes in most of our Indic languages, meets the accuracy bar that they deserve and be
+                    closer to the daily functions of an Indian citizen.
+
+                    </br>
+                    </br>
+                    Speech recognition is a technology that converts
+                    speech to real-time text. This product has a potential to become building block to our digital first
+                    model, in various sectors, such as, education, healthcare and media.
+
+                    </br>
+                    </br>
+                    Ekstep dreams of making this
+                    product open source and freely available for all Indians, to weave it rapidly and effectively into
+                    our social and digital fabric.</p>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid bg-blue mt-n5">
+        <div class="row pb-6 pt-6 justify-content-center  text-white mt-5">
+            <div class="col-8 col-lg-6 mb-3 text-left pb-5 lh-7">
+                <p class="h1 font-wt-900 lh-7">
+                    How will your contribution help
+                </p>
+                <p class="lead">Speech recognition relies on “machine-learning” technology that requires huge
+                    collections of
+                    datasets that includes diversified Indian voices and the corresponding text. We plan to begin with
+                    Hindi and then gradually grow the product to other Indic languages. Our goal is to reach
+                    approximately 10,000 hrs of dataset for Hindi language alone. This is where you come in.
+                    </br>
+                    </br>
+                    To meet
+                    the high-quality standards that we have set for ourselves, as a team, we are inviting you, to join
+                    us and contribute 30-45 minutes of your voice to this initiative. Recording your voice at one
+                    stretch might be overwhelming and hence, we have created leaner measures on our website, for you to
+                    visit us multiple times and commence from where you left us off.
+                    </br>
+                    </br>
+                    Every minute of your contribution
+                    will make a huge difference and bring us closer to our vision. </p>
+
+                <a role="button" href="/record" class="mt-3 h6 btn btn-lg bg-white px-5 py-2 text-primary">START
+                    RECORDING</a>
+            </div>
+            <div class="col-8 col-lg-4 mb-3 text-center p-5">
+                <img src="img/about-us-2.svg" alt="Speaker Diversity" class="img img-fluid h-100">
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid bg-light-blue mt-5">
+        <div class="text-center mt-5 pt-5">
+            ABOUT THE ORGANISATION
+        </div>
+        <p class="h1 font-wt-900 text-center mt-3">
+            Ek Step
+        </p>
+
+        <div class="row pb-6 justify-content-center text-muted">
+            <div class="col-8 col-lg-4 mb-3 text-left lh-7 p-5 lead">
+                In our country, access to learning opportunities, for our citizens, is limited. The problem becomes more
+                complex, if most of the qualitative educational solutions, do not reach, or are not endorsed by the
+                ecosystem of the learner. EkStep intends to create a learner-centric, technology-based platform to not
+                only, improve basic literacy and numeracy, for millions of children and other citizens, but also,
+                empower their ecosystems digitally, to encourage access to this platform.
+
+            </div>
+            <div class="col-8 col-lg-4 mb-3 text-left lh-7 p-5 lead">
+
+                In our country, access to learning opportunities, for our citizens, is limited. The problem becomes more
+                complex, if most of the qualitative educational solutions, do not reach, or are not endorsed by the
+                ecosystem of the learner. EkStep intends to create a learner-centric, technology-based platform to not
+                only, improve basic literacy and numeracy, for millions of children and other citizens, but also,
+                empower their ecosystems digitally, to encourage access to this platform.
+            </div>
+
         </div>
     </div>
 
